--- a/am/index.html
+++ b/am/index.html
@@ -21,6 +21,9 @@
           </head>
           
           <body>
-            <div class=e12_3><div class=e12_4><div  class="e12_5"></div><div  class="e12_7"></div><span  class="e12_16">HTA</span></div><span  class="e12_8">환자정보입력</span><div  class="e12_9"></div><div class=e21_35><div  class="e22_2"></div><span  class="e22_3">이름</span></div><div class=e21_36><div  class="e22_8"></div><span  class="e22_10">증상</span></div><div class=e21_38><div  class="e22_14"></div><span  class="e22_15">위험도</span></div><div class=e21_46><div  class="e22_6"></div><span  class="e22_7">성별</span></div><div class=e21_37><div  class="e22_4"></div><span  class="e22_5">나이</span></div><span  class="e21_39">병원리스트</span><div class=e21_45><div  class="e21_40"></div><span  class="e21_42">a병원</span><span  class="e21_43">병상:n/n</span><span  class="e21_44">남은거리:xkm</span></div><div class=e21_50><div  class="e21_47"></div><span  class="e21_49">요청</span></div></div>
+            <div class=e12_3>
+              <div class=e12_4><div class="e12_5"></div>
+              <div  class="e12_7"></div><span  class="e12_16">HTA</span></div><span  class="e12_8">환자정보입력</span><div  class="e12_9"></div><div class=e21_35><div  class="e22_2"></div><span  class="e22_3">이름</span></div><div class=e21_36><div  class="e22_8"></div><span  class="e22_10">증상</span></div><div class=e21_38><div  class="e22_14"></div><span  class="e22_15">위험도</span></div><div class=e21_46><div  class="e22_6"></div><span  class="e22_7">성별</span></div><div class=e21_37><div  class="e22_4"></div><span  class="e22_5">나이</span></div><div class=e21_99><div  class="e22_22"></div><span  class="e22_23">전공</span></div><span  class="e21_39">병원리스트</span><div class=e21_45><div  class="e21_40"></div><span  class="e21_42">a병원</span><span  class="e21_43">병상:n/n</span><span  class="e21_44">남은거리:xkm</span></div><div class=e21_50><div  class="e21_47"></div><span  class="e21_49">요청</span></div>
+            </div>
           </body>
           </html>
